# TradingAgentsCC

./: .gitignore  CLAUDE.md  NOTICE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ticker/: SKILL.md
.omc/state/: agent-replay-634f7c1c-06b2-4b41-a12f-b308e0e65318.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
.omc/state/sessions/634f7c1c-06b2-4b41-a12f-b308e0e65318/: hud-state.json
.omc/state/sessions/ee1e91d7-acbd-4200-9f33-3589961e8136/: hud-state.json
agents/: aggressive_risk.md  bear_researcher.md  bull_researcher.md  conservative_risk.md  fundamentals_analyst.md  market_analyst.md  neutral_risk.md  news_analyst.md  portfolio_manager.md  research_manager.md  social_analyst.md  trader.md
tools/: fetch_fundamentals.py  fetch_market.py  fetch_news.py  fetch_sentiment.py  format_agent_context.py  generate_report.py  lib.py  render_html.py  render_md.py
