[project]
name = "tradingagentscc"
version = "0.1.0"
description = "Multi-agent stock analysis on Claude Code — a port of TauricResearch/TradingAgents that needs no separate LLM API key."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "JaeHye0k", email = "ahhps2012@naver.com" },
]
keywords = ["trading", "stocks", "claude-code", "multi-agent", "yfinance", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.63",
    "stockstats>=0.6.5",
    "pandas>=2.3.0",
    "python-dateutil>=2.9.0",
    "markdown>=3.5",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/JaeHye0k/TradingAgentsCC"
Repository = "https://github.com/JaeHye0k/TradingAgentsCC"
"Bug Tracker" = "https://github.com/JaeHye0k/TradingAgentsCC/issues"
"Original Work" = "https://github.com/TauricResearch/TradingAgents"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
